manifests/k8s/ingress-controller.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: webapprouting.kubernetes.azure.com
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://learn-up-elearning-frontend.vercel.app"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: acecart.shop
    http:
      paths:
      - path: /api/chat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-chat-service
            port:
              number: 3006
      - path: /api/socket.io(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-chat-service
            port:
              number: 3006
      - path: /api/auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-auth-service
            port:
              number: 3001
      - path: /api/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-user-service
            port:
              number: 3003
      - path: /api/notification(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-notification-service
            port:
              number: 3002
      - path: /api/course(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-course-service
            port:
              number: 3004
      - path: /api/payment(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: learnup-payment-service
            port:
              number: 3005
